Bug #4902
closed4839, 3294 introduced build breakage on older Illumos build machines
90%
Description
The fix for issues 4839 and 3294 ("generated elfdump struct layouts by hand, shouldn't have", commit 894fa7ba) broke the build of gen_struct_layout in usr/src/cmd/sgs/elfdump on older Illumos machines:
../common/gen_struct_layout.c: In function 'gen_prfdinfo':
../common/gen_struct_layout.c:560: error: 'prfdinfo_t' undeclared (first use in this function)
This happens because prfdinfo_t is declared in sys/procfs.h, but the author of the fix forgot to add the appropriate CPPFLAGS for the build target environment into the Makefile rules, so the build was picking up the older sys/procfs.h from the host system instead (which lacked the structure definition). Newer Illumos machines that ship with a newer sys/procfs.h aren't affected, but older (oi_151a7) are.
Related issues
Updated by Gordon Ross over 8 years ago
- Status changed from New to Closed