4902 4839, 3294 introduced build breakage on older Illumos build machines